--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "[1229 rows x 2 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "[1229 rows x 4 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
        "[1229 rows x 4 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
        "[1229 rows x 5 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
        "[1234 rows x 7 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1381,7 @@
        "[1234 rows x 2 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
        "[1234 rows x 3 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1560,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1713,7 @@
        "[1205 rows x 5 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1726,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1799,7 @@
        "1204 2023-08-28      194.57     44.29        85.9       65.28"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1834,12 +1834,74 @@
     }
    ],
    "source": [
-    "print(f\"{round(cagr(194.57),2)} %\")"
+    "cagr_equity=round(cagr(194.57),2)\n",
+    "print(f\"{cagr_equity} %\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.61 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "cagr_debt=round(cagr(44.29),2)\n",
+    "print(f\"{cagr_debt} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.2 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "cagr_hybrid=round(cagr(85.90),2)\n",
+    "print(f\"{cagr_hybrid} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.57 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "cagr_index=round(cagr(65.28),2)\n",
+    "print(f\"{cagr_index} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
