--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
    ],
    "source": [
     "from mftool import Mftool\n",
-    "\n",
+    "from functools import reduce\n",
     "mf = Mftool()\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "[1229 rows x 2 columns]"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "[1229 rows x 4 columns]"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
        "[1229 rows x 4 columns]"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
        "[1229 rows x 5 columns]"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
        "[1234 rows x 7 columns]"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1381,7 @@
        "[1234 rows x 2 columns]"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
        "[1234 rows x 3 columns]"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,22 +1532,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_all_list=\n",
-    "[merge_equity[['date','avg_equity']],\n",
-    " merge_debt[['date','avg_debt']],\n",
-    " merge_hybrid[['date','avg_hybrid']],\n",
-    " index_df[['date','index_nrml']]]\n",
+    "merge_all_list=[merge_equity[['date','avg_equity']],\n",
+    "                merge_debt[['date','avg_debt']],\n",
+    "                merge_hybrid[['date','avg_hybrid']],\n",
+    "                index_df[['date','index_nrml']]]\n",
     "\n",
     "result_df= reduce(lambda left,right: pd.merge(left,right,on=['date'],how='outer'),merge_all_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1560,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1713,7 @@
        "[1205 rows x 5 columns]"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1727,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1750,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>avg_equity</th>\n",
+       "      <th>avg_debt</th>\n",
+       "      <th>avg_hybrid</th>\n",
+       "      <th>index_nrml</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1204</th>\n",
+       "      <td>2023-08-28</td>\n",
+       "      <td>194.57</td>\n",
+       "      <td>44.29</td>\n",
+       "      <td>85.9</td>\n",
+       "      <td>65.28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date  avg_equity  avg_debt  avg_hybrid  index_nrml\n",
+       "1204 2023-08-28      194.57     44.29        85.9       65.28"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns_df=result_df.loc[result_df['date']==result_df['date'].max()]\n",
+    "returns_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cagr(end_value):\n",
+    "    result=(pow((end_value+100)/100,1/5) - 1) * 100\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.12 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "cagr_equity=round(cagr(194.57),2)\n",
+    "print(f\"{cagr_equity} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.61 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "cagr_debt=round(cagr(44.29),2)\n",
+    "print(f\"{cagr_debt} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.2 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "cagr_hybrid=round(cagr(85.90),2)\n",
+    "print(f\"{cagr_hybrid} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.57 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "cagr_index=round(cagr(65.28),2)\n",
+    "print(f\"{cagr_index} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
