--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "from mftool import Mftool\n",
     "from functools import reduce\n",
+    "\n",
     "mf = Mftool()\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -1536,12 +1537,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_all_list=[merge_equity[['date','avg_equity']],\n",
-    "                merge_debt[['date','avg_debt']],\n",
-    "                merge_hybrid[['date','avg_hybrid']],\n",
-    "                index_df[['date','index_nrml']]]\n",
+    "merge_all_list = [\n",
+    "    merge_equity[[\"date\", \"avg_equity\"]],\n",
+    "    merge_debt[[\"date\", \"avg_debt\"]],\n",
+    "    merge_hybrid[[\"date\", \"avg_hybrid\"]],\n",
+    "    index_df[[\"date\", \"index_nrml\"]],\n",
+    "]\n",
     "\n",
-    "result_df= reduce(lambda left,right: pd.merge(left,right,on=['date'],how='outer'),merge_all_list)"
+    "result_df = reduce(\n",
+    "    lambda left, right: pd.merge(left, right, on=[\"date\"], how=\"outer\"), merge_all_list\n",
+    ")"
    ]
   },
   {
@@ -1742,8 +1747,8 @@
    ],
    "source": [
     "result_df.plot(x=\"date\", y=[\"avg_equity\", \"avg_debt\", \"avg_hybrid\", \"index_nrml\"])\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Absolute Returns in %')\n",
+    "plt.xlabel(\"Date\")\n",
+    "plt.ylabel(\"Absolute Returns in %\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -1805,7 +1810,7 @@
     }
    ],
    "source": [
-    "returns_df=result_df.loc[result_df['date']==result_df['date'].max()]\n",
+    "returns_df = result_df.loc[result_df[\"date\"] == result_df[\"date\"].max()]\n",
     "returns_df"
    ]
   },
@@ -1816,7 +1821,7 @@
    "outputs": [],
    "source": [
     "def cagr(end_value):\n",
-    "    result=(pow((end_value+100)/100,1/5) - 1) * 100\n",
+    "    result = (pow((end_value + 100) / 100, 1 / 5) - 1) * 100\n",
     "    return result"
    ]
   },
@@ -1834,7 +1839,7 @@
     }
    ],
    "source": [
-    "cagr_equity=round(cagr(194.57),2)\n",
+    "cagr_equity = round(cagr(194.57), 2)\n",
     "print(f\"{cagr_equity} %\")"
    ]
   },
@@ -1852,7 +1857,7 @@
     }
    ],
    "source": [
-    "cagr_debt=round(cagr(44.29),2)\n",
+    "cagr_debt = round(cagr(44.29), 2)\n",
     "print(f\"{cagr_debt} %\")"
    ]
   },
@@ -1870,7 +1875,7 @@
     }
    ],
    "source": [
-    "cagr_hybrid=round(cagr(85.90),2)\n",
+    "cagr_hybrid = round(cagr(85.90), 2)\n",
     "print(f\"{cagr_hybrid} %\")"
    ]
   },
@@ -1888,7 +1893,7 @@
     }
    ],
    "source": [
-    "cagr_index=round(cagr(65.28),2)\n",
+    "cagr_index = round(cagr(65.28), 2)\n",
     "print(f\"{cagr_index} %\")"
    ]
   },
