--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -1905,7 +1905,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def beta(start_date, end_date,type_of_mf):\n",
+    "def beta_calc(start_date, end_date,type_of_mf):\n",
     "    \n",
     "    index_start_value = (\n",
     "        result_df.loc[result_df['date']== start_date,'index_nrml'].values[0]\n",
@@ -1948,7 +1948,7 @@
     }
    ],
    "source": [
-    "result=beta('2020-02-20','2020-03-23','equity')\n",
+    "result=beta_calc('2020-02-20','2020-03-23','equity')\n",
     "print(result)"
    ]
   },
