--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1931,24 +1931,53 @@
     "        result=\"Wrong mf Type\"\n",
     "        \n",
     "    \n",
+    "    return round(result,2)\n",
+    "\n",
+    "\n",
+    "def alpha_calc(start_date, end_date,type_of_mf):\n",
+    "    \n",
+    "    index_start_value = (\n",
+    "        result_df.loc[result_df['date']== start_date,'index_nrml'].values[0]\n",
+    "    )\n",
+    "    index_end_value = (\n",
+    "        result_df.loc[result_df['date']== end_date,'index_nrml'].values[0]\n",
+    "    )\n",
+    "    index_change=index_end_value - index_start_value \n",
+    "    \n",
+    "    if type_of_mf=='equity':\n",
+    "        mf_start_value=result_df.loc[result_df['date']== start_date,'avg_equity'].values[0]\n",
+    "        mf_end_value=result_df.loc[result_df['date']== end_date,'avg_equity'].values[0]\n",
+    "        result=(mf_end_value - mf_start_value)/index_change\n",
+    "    elif type_of_mf=='debt':\n",
+    "        mf_start_value=result_df.loc[result_df['date']== start_date,'avg_debt'].values[0]\n",
+    "        mf_end_value=result_df.loc[result_df['date']== end_date,'avg_debt'].values[0]\n",
+    "        result=(mf_end_value - mf_start_value)/index_change\n",
+    "    elif type_of_mf=='hybrid':\n",
+    "        mf_start_value=result_df.loc[result_df['date']== start_date,'avg_hybrid'].values[0]\n",
+    "        mf_end_value=result_df.loc[result_df['date']== end_date,'avg_hybrid'].values[0]\n",
+    "        result=(mf_end_value - mf_start_value)/index_change\n",
+    "    else:\n",
+    "        result=\"Wrong mf Type\"\n",
+    "        \n",
+    "    \n",
     "    return round(result,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.93\n"
+      "0.76\n"
      ]
     }
    ],
    "source": [
-    "result=beta_calc('2020-02-20','2020-03-23','equity')\n",
+    "result=alpha_calc('2020-03-23','2021-01-14','hybrid')\n",
     "print(result)"
    ]
   },
